force-app/main/default/objects/Study_Template__c/Study_Template__c.object-meta.xml
<CustomObject>
    <label>Study Template</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Study Template ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>