force-app/main/default/objects/Study_Template__c/fields/Reason_of_verification__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_verification__c</fullName>
    <label>Reason of verification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>