force-app/main/default/objects/Study_Template__c/fields/Study_template_Name__c.field-meta.xml
<CustomField>
    <fullName>Study_template_Name__c</fullName>
    <label>Study template Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>