force-app/main/default/objects/Study_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Study_template_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>